<resources>
    <string name="app_name">EduBright</string>
    <string name="signup">Register</string>
    <string name="login">Login</string>
    <string name="message_welcome_page">EduBright adalah platform pembelajaran interaktif yang membuat belajar jadi mudah dan menyenangkan. Temukan kursus, latihan soal, dan tantangan menarik untuk membantu Anda meraih kesuksesan pendidikan dengan cara yang kreatif dan inovatif.</string>
    <string name="message_support">Belajar Cerdas, Raih Prestasi!</string>
    <string name="title_welcome_page">Welcome to EduBright</string>
    <string name="title_signup_page">Complete your data below</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Please enter your data first</string>
    <string name="title_login_page">Are you ready to upgrade your skills?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="detail">Detail Page</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="tv_database_design_programming"><![CDATA[Database Design & Programming]]></string>
    <string name="judul">Judul</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="eduimage">Gambar</string>
    <string name="login_failed">Login has failed</string>
    <string name="try_again">Try Again</string>
    <string name="fill_email">Please fill your email</string>
    <string name="fill_password">Please fill your password</string>
    <string name="success_login">You have successfully logged in\n</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="submit">Submit</string>
    <string name="enter_question">Type your question here</string>
    <string name="response_here">Your response will appear here</string>
    <string name="loading">Loading...</string>
    <string name="confirm_logout">Are you sure want to logout?</string>
    <string name="tvDesc_sql_fundamental">SQL (Structured Query Language) is a powerful and widely-used language for managing and manipulating relational databases. Understanding the fundamentals of SQL is essential.</string>
    <string name="tvAuthor_sql_fundamental">Thomas Partey</string>
    <string name="tvTitle_sql_fundamental">SQL Fundamentals</string>
    <string name="tvAuthor_database_design">Michael Anderson</string>
    <string name="tvDesc_Database_Design">Learn the fundamentals of database design, including normalization, creating ERDs, and implementing database schemas. Perfect for building efficient and well-structured applications.</string>
    <string name="tvTitle_cloud_computing">Cloud Computing</string>
    <string name="tvAuthor_cloud_computing">James Bennet</string>
    <string name="tvDesc_cloud_computing">Learn how cloud computing revolutionizes IT by enabling on-demand access to computing resources like storage, servers, and applications over the internet. This course covers core concepts such as cloud service models (IaaS, PaaS, SaaS), deployment types (public, private, hybrid), and key tools used in the industry. Ideal for those looking to build scalable, cost-effective, and flexible IT solutions for modern businesses.</string>
    <string name="tvTitle_machine_learning">Machine Learning</string>
    <string name="tvAuthor_machine_learning">Ethan Scott</string>
    <string name="tvDesc_machine_learning">Dive into the world of machine learning. Learn core concepts such as supervised and unsupervised learning, data preprocessing, algorithm selection, and model training. Build a foundation to create intelligent systems, analyze data patterns, and solve complex problems using advanced predictive techniques. This course is perfect for aspiring data scientists and AI enthusiasts.</string>
    <string name="tvTitle_kotlin_fund">Kotlin Fundamentals</string>
    <string name="tvAuthor_kotlin_fund">Ava Collins</string>
    <string name="tvDesc_kotlin_fund">Master the basics of Kotlin, a modern programming language designed for Android development and beyond. This course covers essential topics such as syntax, variables, control flow, functions, and object-oriented programming. Perfect for beginners aiming to build robust and efficient applications with Kotlin is concise and expressive features.</string>
    <string name="tvTitle_uiux_design">UI/UX Design</string>
    <string name="tvAuthor_uiux_design">Emma Harris</string>
    <string name="tvDesc_uiux_design">Explore the principles of creating user-friendly and visually appealing designs. This course covers key aspects of User Interface (UI) and User Experience (UX) design, including wireframing, prototyping, usability testing, and understanding user behavior. Ideal for those aspiring to craft intuitive and engaging digital products.</string>
    <string name="virtual_assistant">Virtual Assistant</string>
    <string name="home">Home</string>
    <string name="search">search\n</string>
    <string name="share_your_feedback_with_us">Share your feedback with us</string>
    <string name="enter_your_feedback_here">Enter your feedback here</string>
    <string name="students_highlighted_that_the_class_pace">Students highlighted that the class pace...</string>
    <string name="penulis">Penulis</string>
    <string name="student_feedback_sentiment">Student Feedback Sentiment</string>
    <string name="default_web_client_id">269447904210-t85488moh49vml9bb908kiem40t3uqed.apps.googleusercontent.com</string>
    <string name="submit_otp">Submit</string>
    <string name="otp_hint">One-Time Password</string>
    <string name="otp_verified">OTP Verified Successfully</string>
    <string name="verification_id_missing">Verification ID is missing</string>
    <string name="invalid_otp">Invalid OTP</string>

    <string name="enter_otp">Enter the OTP sent to your phone</string>
    <string name="enter_otp_hint">123456</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="enter_valid_otp">Please enter a valid OTP</string>
    <string name="invalid_verification_id">Invalid verification ID</string>
    <string name="otp_verification_failed">OTP verification failed</string>
    <string name="dark_mode">Dark Mode</string>


</resources>