<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="#F5F5F5"
    tools:context=".view.chat.ChatActivity"
    >

    <EditText
    android:id="@+id/etQuestion"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/enter_question"
    android:textSize="20sp"/>
    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:id="@+id/tvResponse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/response_here"
        android:textSize="20sp"/>
</LinearLayout>